# pcs

./: CMakeLists.txt  README.md
res/: resource.qrc
res/qss/bar/: menu.qss  status.qss
res/qss/button/: about.qss  exit.qss  layout.qss  operate.qss
res/qss/normal/: viewer.qss
src/: main.cc  main.cpp
src/core/cloud/: cloud.cc  cloud.hh  filter.cc  filter.hh  item.hh
src/core/operator/: interactor.hh  operator.cc  operator.hh  operator.impl.hh
src/core/operator/interactor/: normal.hh  point-picker.hh
src/core/pointcloud/: cloud.cc  cloud.hh  cloud.impl.hh  filter.cc.hide  filter.hh.hide
src/core/pointcloud/algorithm/esdf/: generator.hh
src/core/pointcloud/algorithm/filter/: compress.cc  compress.hh
src/core/renderer/: Property.hh  cloud.cpp  cloud.hpp  index.hh  interactor.hh  renderer.cc  renderer.hh  renderer.impl.hh
src/core/share/: cloud-box.hh  common.hh  index.hh  object.hh  objects.hh
src/core/viewer/: cloud.cpp  cloud.hpp  item.hpp
src/qml/: qml.qrc
src/qwidget/workspace/: cloud_editor.hh  cloud_editor.hpp  cloud_list_item.hh  operator.hpp  operator_bar.hh  operator_bar.hpp  operators.hh  operators.hpp  tool_bar.hpp  view.hh  viewer.hpp  workspace.hh  workspace.hpp  workspace.ui
src/qwidget/workspace/operator/: operator.hpp  operator.ui
src/qwidget/workspace/tool_bar/: cloud_item.ui  tool_bar.hpp  tool_bar.ui
src/qwidget/workspace/viewer/: viewer.hpp  viewer.ui
src/ui/workspace/: workspace.cpp
src/ui/workspace/viewer/: viewer.cpp  viewer.hpp  viewer.ui
src/utility/: common.hh  common.hpp  math.hh  single.hh
src/utility/pointcloud/: common.hpp
src/widget/workspace/: cloud-editor.hh  list-item.hh  operator-bar.hh  operators.hh  view.hh  workspace.hh
src/widget/workspace/operators/: button.hh  coordinate.hh  operators.hh  selector.hh
test/: CMakeLists.txt  grid.cc  picker.cc
ui/: cloud_editor.ui  operator.ui  selector.ui  tool_bar.ui  view.ui  viewer.ui  workspace.ui
